# quadruped-robot

./: .clang-format  .gitignore  README.md  env  format_code.sh
amd/: CMakeLists.txt  package.xml
amd/src/: SuiteSparse_config.c  amd_defaults.c
control/unitree_actuator_sdk/: CMakeLists.txt  README.md
control/unitree_actuator_sdk/src/: change_id.cpp  example_go_m8010_6.cpp
control/unitree_legged_real/: CMakeLists.txt  package.xml
control/unitree_legged_real/include/: convert.h
control/unitree_legged_real/src/: control_motor_by_ros2.cpp  ros2_walk_example.cpp
control/unitree_real/: CMakeLists.txt  package.xml
control/unitree_real/src/: control_motor.cpp  state_sub.cpp  twist_sub.cpp
controller/unitree_joint_controller/: CMakeLists.txt  package.xml  unitree_joint_plugin.xml  unitree_position_plugin.xml
controller/unitree_joint_controller/src/: pid.cpp  speed_limiter.cpp  unitree_joint_controller.cpp  unitree_joint_controller_.cpp  unitree_joint_controller_parameter.yaml
controller/unitree_legged_control/: CMakeLists.txt  package.xml  unitree_controller_plugins.xml
controller/unitree_legged_control/include/: unitree_joint_control_tool.h
controller/unitree_legged_control/src/: joint_controller.cpp
controller/unitree_position_controller/: CMakeLists.txt  package.xml
controller/unitree_position_controller/src/: pid.cpp  unitree_position_controller.cpp  unitree_position_controller_parameter.yaml
deeprobotics_legged_sdk/: package.xml
deeprobotics_legged_sdk/include/: command.h  parse_cmd.h  udpsocket.hpp
deeprobotics_legged_sdk/include/deeprobotics_legged_sdk/: robot_types.h  send_to_robot.h
deeprobotics_legged_sdk/src/: parse_cmd.cpp  send_to_robot.cpp
examples/: CMakeLists.txt  README.md  package.xml
examples/example_a1_real/: example_a1_real.cpp
examples/example_a1_sim/: example_a1_sim.cpp  example_ros1_control.cpp  example_ros2_control.cpp
examples/example_lite3_real/: example_lite3_real.cpp
examples/simulation/: example_gazebo.cpp  example_joint.cpp  example_keyboard.cpp  example_ros1_control.cpp  example_set_entity.py  example_simulation_1.cpp  example_simulation_2.cpp
gazebo_demos/: CMakeLists.txt  README.md
gazebo_demos/config/: robot.rviz
gazebo_demos/doc/: index.md
gazebo_demos/examples/: example_robot.cpp
gazebo_demos/launch/: robot.launch.py
gazebo_demos/worlds/: empty.world  gazebo_ros_state_demo.world
gazebo_demos/xacro/: robot.urdf
gazebo_ros2_control_demos/: CMakeLists.txt
gazebo_ros2_control_demos/config/: cart_controller_effort.yaml  robot_controller.yaml
gazebo_ros2_control_demos/examples/: example_diff_drive.cpp  example_effort.cpp  example_gripper.cpp  example_position.cpp
gazebo_ros2_control_demos/launch/: diff_drive.launch.py  pendulum_example_position.launch.py  robot.launch.py
gazebo_ros2_control_demos/urdf/: robot.urdf
lcm/: .clang-format  CMakeLists.txt  package.xml
lcm/cmake/: FindGo.cmake
lcm/docs/content/: mainpage.md  tutorial-c.md  tutorial-cmake.md  tutorial-cpp.md  tutorial-java.md  tutorial-matlab.md
lcm/lcm/: lcm.c  lcm_file.c  lcm_memq.c
lcm/lcm-cmake/: lcmUtilities.cmake
lcm/lcm-java/jchart2d-code/: CMakeLists.txt
lcm/lcm-python/: pyeventlog.c
lcm/lcm/windows/: WinPorting.cpp
lcm/test/c/: common.c
lcm/test/gtest/: CMakeLists.txt
matplotlib/: CMakeLists.txt  package.xml
model_description/: CMakeLists.txt  package.xml
model_description/unitree/urdf/: unitree_motor_description.urdf.xacro
quadprog/: CMakeLists.txt  package.xml
quadprog/include/: QuadProg++.hh
quadprog/src/: QuadProg++.cc  main.cc
quadruped/: CMakeLists.txt  README.md  package.xml
quadruped/README/: qr_motor.md
quadruped/config/: qr_config.h  user_parameters.yaml
quadruped/config/a1/: main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml
quadruped/config/a1_sim/: a1_sim.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml  terrain.yaml
quadruped/config/lite3/: lite3_robot.yaml  main.yaml  openloop_gait_generator.yaml
quadruped/docs/: README.md  demo.md  helloworld.md  helloworldreal.md  helloworldsim.md  index.md  installation.md  navigation.md  overview.md  references.md  structure.md
quadruped/src/action/: qr_action.cpp
quadruped/src/controllers/: qr_desired_state_command.cpp  qr_foot_trajectory_generator.cpp  qr_locomotion_controller.cpp  qr_stance_leg_controller_interface.cpp  qr_state_dataflow.cpp  qr_swing_leg_controller.cpp  rl_locomotion_controller.cpp
quadruped/src/dynamics/: floating_base_model.cpp
quadruped/src/estimators/: qr_anomaly_detection.cpp  qr_ground_surface_estimator.cpp  qr_robot_estimator.cpp  qr_robot_pose_estimator.cpp  qr_robot_velocity_estimator.cpp  qr_state_estimator_container.cpp
quadruped/src/exec/: qr_robot_runner.cpp
quadruped/src/fsm/: qr_control_fsm.cpp  qr_fsm_state.cpp  qr_fsm_state_locomotion.cpp  qr_fsm_state_passive.cpp  qr_fsm_state_rl_locomotion.cpp  qr_fsm_state_standup.cpp  qr_safety_checker.cpp
quadruped/src/gait/: qr_openloop_gait_generator.cpp  qr_walk_gait_generator.cpp
quadruped/src/planner/: qr_com_adjuster.cpp  qr_foot_stepper.cpp  qr_foothold_planner.cpp  qr_pose_planner.cpp
quadruped/src/robots/: qr_interface.cpp  qr_motor.cpp  qr_robot.cpp  qr_robot_a1.cpp  qr_robot_a1_sim.cpp  qr_robot_aliengo_sim.cpp  qr_robot_go1.cpp  qr_robot_lite2.cpp  qr_robot_lite2_sim.cpp  qr_robot_lite3.cpp  qr_robot_lite3_sim.cpp  qr_robot_sim.cpp
quadruped/src/ros/: qr_cmd_vel_receiver.cpp  qr_control2gazebo.cpp  qr_control2gazebo_msg  qr_telekeyboard.cpp  (+2 more)
tiny_ekf/: CMakeLists.txt  README.md
tiny_ekf/include/: TinyEKF.h
unitree_legged_sdk/: CMakeLists.txt  package.xml
unitree_motor_example/: CMakeLists.txt  package.xml  unitree_motor_example.xml
unitree_motor_example/hardware/: unitree_motor_system.cpp
unitree_position_controller/: CMakeLists.txt  error.txt  package.xml  unitree_position_plugin.xml
unitree_position_controller/src/: odometry.cpp  speed_limiter.cpp  unitree_position_controller.cpp  unitree_position_controller_parameter.yaml
unitree_sdk/: CMakeLists.txt  README.md  package.xml
(+1557 files in other folders)
