<?xml version="1.0"?>
<package format="3">
  <name>deeprobotics_legged_sdk</name>
  <version>0.0.1</version>
  <description>The deeprobotics_legged_sdk package for ros2</description>

  <maintainer email="5121502047@stu.ecnu.edu.cn">sherman</maintainer>
  <maintainer email="postrantor@gmail.com">sherman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
