<?xml version="1.0"?>
<package format="3">
  <name>matplotlib_cpp</name>
  <version>0.0.1</version>
  <description>The matplotlib_cpp package for ros2</description>

  <maintainer email="5121502047@stu.ecnu.edu.cn">sherman</maintainer>
  <maintainer email="postrantor@gmail.com">sherman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
