<?xml version="1.0"?>
<package format="2">
    <name>quadruped</name>
    <version>0.2.0</version>
    <description>The quadruped package for ros2</description>

    <maintainer email="tophill.robotics@gmail.com">postrantor</maintainer>
    <maintainer email="postrantor@gmail.com">postrantor</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>unitree_msgs</depend>
    <depend>message_filters</depend>
    <depend>tf2</depend>

    <depend>eigen3</depend>
    <depend>unitree_legged_sdk</depend>
    <depend>yaml_cpp_vendor</depend>
    <depend>deeprobotics_legged_sdk</depend>
    <depend>tiny_ekf</depend>
    <depend>MITAMD</depend>
    <depend>tinynurbs</depend>
    <depend>quadprog</depend>
    <depend>qpOASES</depend>
    <depend>lcm</depend>
    <depend>matplotlib_cpp</depend>

    <!-- <depend>pcl_ros</depend> -->
    <!-- <depend>pcl_conversions</depend> -->
    <!-- <depend>libpcl-all-dev</depend> -->

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
