<?xml version="1.0"?>
<package format="2">
  <name>unitree_sdk</name>
  <version>0.0.0</version>
  <description>The unitree_sdk package.</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>

  <depend>ament_cmake</depend>
  <depend>ament_cmake_ros</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>unitree_msgs</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
