<package format="3">
    <name>unitree_legged_real</name>
    <version>0.0.0</version>
    <description>The unitree_legged_real package</description>
    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rcl</depend>
    <depend>rosidl_default_runtime</depend>
    <depend>rosbag2_cpp</depend>
    <depend>std_msgs</depend>
    <depend>unitree_go</depend>
    <depend>unitree_api</depend>
    <depend>unitree_legged_sdk</depend>
    <depend>unitree_actuator_sdk</depend>
    <depend>ros2_unitree_legged_msgs</depend>
    <depend>eigen</depend>
    <depend>rosidl_typesupport_cpp</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>